# mobius.py

./: CLAUDE.md  CONTRIBUTING.md  FEATURES_LIMITATIONS.md  MICROLIBRARY.md  Makefile  README.md  README_TESTING.md  REFACTORING.md  ROADMAP.md  SCHEMA_V1_STRATEGY.md  SEMANTIC_UNDERSTANDING.md  STORE.md  TESTING.md  TODO.md  USAGE.md  aston.py  bb.py  mobius.py  ouverture.py  pyproject.toml  test_aston_fuzz_mutations.py  test_ouverture.py
.github/workflows/: test.yml
examples/: README.md  adder.py  example_simple_french.py  example_simple_spanish.py  triple_spanish.py  twice.py
strategies/: priority-zero.md  schema-v1.md
tests/: conftest.py  test_internals.py  test_storage.py
tests/add/: test_add.py
tests/async/: test_async.py
tests/check/: test_check.py
tests/code/: example_seed_1337.py  example_seed_2001.py  example_seed_2600.py  example_seed_3000.py  example_seed_42.py  example_seed_666.py
tests/compile/: test_compile.py
tests/fork/: test_fork.py
tests/init/: test_init.py
tests/migrate/: test_migrate.py
tests/refactor/: test_refactor.py
tests/remote/: test_git_remote.py
tests/review/: test_review.py
tests/run/: test_run.py
tests/storage/: test_bytes.py  test_erdos.py  test_nstore.py
tests/validate/: test_validate.py
transcripts/end2end/: 00.md  01.md
